# cybertool

./: .gitignore  README.md  pyproject.toml
cybertool/: __main__.py  hookspecs.py  manager.py  utils.py
cybertool/config/: loader.py
cybertool/plugins/: example_plugin.py
plugins/: ssh_hardening.py
plugins/ssh_hardening/: ssh_hardening.py
plugins/ssh_hardening/guides/: ubuntu_14.04.yaml  ubuntu_16.04.yaml  ubuntu_18.04.yaml  ubuntu_20.04.yaml  ubuntu_22.04.yaml  ubuntu_24.04.yaml
tests/: test_cli.py  test_loader.py  test_plugin_manager.py
